--- a/index.html
+++ b/index.html
@@ -3,195 +3,139 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WorkWave - Earn ₦3,000 Daily</title>
+  <title>Oluwa's Personal Profile</title>
   <style>
+    /* General Styles */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #2b0040, #5a007a);
-      color: #fff;
       margin: 0;
       padding: 0;
+      background-color: #f0f4f8;
+      color: #333;
     }
 
     .container {
+      width: 90%;
       max-width: 1000px;
-      margin: 0 auto;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    h1, h2 {
-      color: #FFD700;
-      margin-bottom: 15px;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.7;
-      margin: 10px 0 20px;
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 20px;
-      background: linear-gradient(90deg, #FFD700, #FFB600);
-      color: #2b0040;
-      font-weight: bold;
-      text-decoration: none;
-      padding: 16px 28px;
-      border-radius: 8px;
-      font-size: 18px;
-      transition: transform 0.2s, opacity 0.2s;
-    }
-
-    .btn:hover {
-      opacity: 0.9;
-      transform: scale(1.05);
-    }
-
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-      margin: 20px 0;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-    }
-
-    .countdown-box {
       margin: 30px auto;
-      font-size: 22px;
-      font-weight: bold;
-      background: rgba(255,255,255,0.1);
-      padding: 15px;
-      border-radius: 8px;
-      color: #FFD700;
-      display: inline-block;
+      display: grid;
+      grid-template-rows: auto 1fr;
+      gap: 30px;
     }
 
-    section {
-      margin: 60px 0;
-      padding: 20px;
+    /* Top Section: Profile */
+    .profile-section {
+      display: grid;
+      grid-template-columns: 150px 1fr;
+      gap: 20px;
+      align-items: center;
     }
 
-    .features, .how-it-works, .testimonials {
-      background: rgba(255,255,255,0.05);
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    .profile-pic {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 3px solid #4a90e2;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      object-fit: cover; /* ensures the image fits inside the circle */
     }
 
-    .feature-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    .about {
+      background-color: #ffffff;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
+
+    .about:hover {
+      transform: translateY(-5px);
+    }
+
+    .about h2 {
+      margin-top: 0;
+      color: #4a90e2;
+    }
+
+    /* Bottom Section: Hobbies & Aspirations */
+    .info-section {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       gap: 20px;
     }
 
-    .feature-item {
-      flex: 1 1 250px;
-      background: rgba(255,255,255,0.08);
+    .hobbies, .aspirations {
+      background-color: #ffffff;
       padding: 20px;
-      border-radius: 10px;
-      font-size: 16px;
+      border-radius: 15px;
+      border-left: 5px solid #4a90e2;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.08);
+      transition: transform 0.3s, box-shadow 0.3s;
     }
 
-    .testimonials .card {
-      background: rgba(255,255,255,0.08);
-      padding: 20px;
-      border-radius: 10px;
-      margin: 15px;
-      font-style: italic;
+    .hobbies:hover, .aspirations:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
     }
 
-    footer {
-      background: rgba(0,0,0,0.6);
-      padding: 20px;
-      font-size: 13px;
-      color: #bbb;
-      text-align: center;
+    .hobbies h3, .aspirations h3 {
+      margin-top: 0;
+      color: #4a90e2;
+    }
+
+    .hobbies ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .hobbies li {
+      margin-bottom: 10px;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .profile-section {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+
+      .info-section {
+        grid-template-columns: 1fr;
+      }
+
+      .profile-pic {
+        margin: 0 auto;
+      }
     }
   </style>
 </head>
 <body>
-
-  <!-- Hero Section -->
   <div class="container">
-    <h1>Earn ₦3,000 for Every Picture You Upload!</h1>
-    <p>Turn your daily uploads into steady income. Thousands are already cashing out — don’t miss out.</p>
-
-    <div class="countdown-box">
-      Offer ends in <span id="countdown">Loading...</span>
+    <!-- Top Section: Profile -->
+    <div class="profile-section">
+      <!-- Profile picture -->
+      <img src="./assets/image/profile.jpg" alt="Profile Picture" class="profile-pic">
+      <div class="about">
+        <h2>Talk About Yourself</h2>
+        <p>Hello! My name is Otoide Wisdom, and I am a passionate individual who loves technology, creativity, and learning new skills. I enjoy exploring innovative ideas and applying them to real-life projects. My goal is to continuously grow, improve myself, and contribute positively to my community and the tech world.</p>
+      </div>
     </div>
 
-    <a href="https://chat.whatsapp.com/LgjJCZO0k1SCEe89NmJ7MX?mode=ems_copy_t" target="_blank" class="btn">
-      🚀 Join WorkWave Now
-    </a>
-
-    <img src="27836C96-CE30-40BF-8202-783BB77E47DA.png" alt="WorkWave Flyer">
+    <!-- Bottom Section: Hobbies & Aspirations -->
+    <div class="info-section">
+      <div class="hobbies">
+        <h3>Hobbies</h3>
+        <ul>
+          <li><strong>Reading:</strong> I enjoy books and articles about technology, self-improvement, and entrepreneurship. It helps me gain new insights and apply them to my personal and professional life.</li>
+          <li><strong>Gaming:</strong> I love strategy and puzzle games, which allow me to think critically and solve problems efficiently while having fun and relaxing my mind.</li>
+          <li><strong>Music:</strong> Listening to music is one of my favorite hobbies. It inspires creativity, improves focus, and provides a great way to unwind after a busy day.</li>
+        </ul>
+      </div>
+      <div class="aspirations">
+        <h3>Aspiration in Life</h3>
+        <p>My aspiration is to become a skilled software developer who creates meaningful and innovative solutions for everyday problems. I want to contribute positively to the technology industry, help people achieve their goals, and continuously learn and grow both personally and professionally throughout my life.</p>
+      </div>
+    </div>
   </div>
-
-  <!-- Features Section -->
-  <section class="features container">
-    <h2>Why Choose WorkWave?</h2>
-    <div class="feature-list">
-      <div class="feature-item">✅ Instant withdrawals directly to your bank.</div>
-      <div class="feature-item">✅ Earn ₦3,000 per upload — no limits!</div>
-      <div class="feature-item">✅ Over 5,000+ active users already earning daily.</div>
-      <div class="feature-item">✅ Zero stress — simple, fast, and reliable.</div>
-    </div>
-  </section>
-
-  <!-- How It Works Section -->
-  <section class="how-it-works container">
-    <h2>How It Works</h2>
-    <p>Getting started is simple and takes less than 5 minutes.</p>
-    <div class="feature-list">
-      <div class="feature-item">📸 <b>Upload Pictures</b> – The more you upload, the more you earn.</div>
-      <div class="feature-item">💵 <b>Get Paid Instantly</b> – Withdraw earnings to your bank account anytime.</div>
-      <div class="feature-item">🚀 <b>Scale Up</b> – Turn daily uploads into a steady stream of income.</div>
-    </div>
-  </section>
-
-  <!-- Testimonials Section -->
-  <section class="testimonials container">
-    <h2>What People Are Saying</h2>
-    <div class="card">“I made ₦15,000 in just 5 days. This is the easiest side hustle I’ve ever tried!” – Mary A.</div>
-    <div class="card">“WorkWave pays instantly, no delays. I highly recommend!” – Chinedu O.</div>
-    <div class="card">“At first I thought it was too good to be true, but now I’m hooked. Daily earnings are real.” – Sarah K.</div>
-  </section>
-
-  <!-- Final CTA -->
-  <div class="container">
-    <h2>Don’t Miss Out!</h2>
-    <p>Spots are limited — secure yours now and start earning within the next 24 hours.</p>
-    <a href="https://chat.whatsapp.com/LgjJCZO0k1SCEe89NmJ7MX?mode=ems_copy_t" target="_blank" class="btn">
-      ✅ Start Earning Today
-    </a>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    © 2025 WorkWave. All rights reserved. | Trusted by Nigerians nationwide.
-  </footer>
-
-  <script>
-    // Countdown Timer (6 hours from now)
-    const countdownElement = document.getElementById("countdown");
-    const deadline = new Date().getTime() + (6 * 60 * 60 * 1000); // 6 hours
-
-    const x = setInterval(function() {
-      const now = new Date().getTime();
-      const t = deadline - now;
-
-      if (t >= 0) {
-        const hours = Math.floor((t % (1000 * 60 * 60 * 24)) / (1000*60*60));
-        const minutes = Math.floor((t % (1000 * 60 * 60)) / (1000*60));
-        const seconds = Math.floor((t % (1000 * 60)) / 1000);
-        countdownElement.innerHTML = hours + "h " + minutes + "m " + seconds + "s ";
-      } else {
-        clearInterval(x);
-        countdownElement.innerHTML = "Offer Expired ⏰";
-      }
-    }, 1000);
-  </script>
 </body>
 </html>
